BridJ: moved library initialization code from JNI to Platform, to fix static initialization order... (needs rebuild of all native libs, again...)